--- a/confusion/package.json
+++ b/confusion/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.3",
+    "bootstrap": "^4.0.0",
+    "jquery": "^1.9.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-popper": "^0.9.2",
+    "react-scripts": "1.1.5",
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
