--- a/confusion/package.json
+++ b/confusion/package.json
@@ -13,9 +13,14 @@
     "reactstrap": "^5.0.0"
   },
   "scripts": {
+    "start": "npm run lite",
+    "lite": "lite-server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "lite-server": "^2.4.0"
   }
 }
